--- a/resources/assets/less/frontend/theme.less
+++ b/resources/assets/less/frontend/theme.less
@@ -2254,7 +2254,6 @@ ABOUT
 	height: 100%;
 	top: 0;
 	left: 0;
-	background: #000;
 	opacity: 0.5;
 	z-index: 2;
 }
@@ -2354,6 +2353,7 @@ ROTATION
 	-moz-transform: rotate(6deg);
 	-webkit-transform: rotate(6deg);
 	-ms-transform: rotate(6deg);
+	-webkit-backface-visibility: hidden;
 }
 
 .right-bottom {
@@ -2363,6 +2363,7 @@ ROTATION
 	-moz-transform: rotate(-6deg);
 	-webkit-transform: rotate(-6deg);
 	-ms-transform: rotate(-6deg);
+	-webkit-backface-visibility: hidden;
 }
 .top-part {
 	background-color: white;
@@ -2374,8 +2375,8 @@ ROTATION
 .bottom-part {
 	background-color: white;
 	position: absolute;
-	bottom: 1px;
 	width: 130%;
+	bottom: 0;
 	height: 110px;
 }
 
